Adicionado funcionalidade de empréstimos ao servidor. Um usuário agora pode pegar livros emprestados, que são registrados no banco de dados, e listados em uma nova página única de usuário. Por lá, o usuário também é capaz de devolver o livro.

--- a/public/livros/lista.html
+++ b/public/livros/lista.html
@@ -12,17 +12,30 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <div class="row" style="padding: 10px; background-color: rgb(23, 23, 56); color: aliceblue;">
+        <div class="col" style="margin-left: 80px; margin-top: 10px;">
+            <h3>Biblioteca Prototype</h3>
+        </div>
+        <div class="col"></div>
+        <div class="col">
+            <a href="/userpage/userpage.html">
+                <img src="account-white-icon.png" alt="Página Do Usuário" style="width: 45px; height: 45px; margin-top: 5px; margin-left: 300px;">
+            </a>
+        </div>
+    </div>
     <h1 style="text-align: center; font-size: 40px;">Índice de Livros</h1>
-    <table class="table" id="table1" style="width: 60%; margin: auto;">
+    <table class="table table-dark" id="table1" style="width: 80%; margin: auto;">
         <tr id="tr1" style="font-size: 25px; ">
             <th><strong>Nome</strong></th>
             <th><strong>Gênero</strong></th>
             <th><strong>Ano</strong></th>
             <th><strong>Autor</strong></th>
+            <th><strong>Status</strong></th>
         </tr>
         <thead></thead>
         <tbody id="tbody1"></tbody>
-    </table><br>
+    </table>
+    <br>
 
     <div class="border" style="margin: auto; width: 20%;">
         <h3 class="border" id="title" style="text-align: center;">Registro de Livros</h2><br>
